--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Form</title>
+        <!-- link rel="stylesheet" href="form.css"-->
+
+        <style>
+
 *   {
     background-color: #ffffff;
     margin: 0px;
@@ -20,7 +28,7 @@ div form input  {
     border: none;
     outline: none;
     border-bottom: 4px solid aquamarine;
-    transition: 0.50s;
+    transition: 0.40s;
 }
 
 div form input:focus  {
@@ -37,7 +45,7 @@ div form textarea  {
     border: none;
     outline: none;
     border-bottom: 4px solid aquamarine;
-    transition: 0.50s;
+    transition: 0.40s;
 }
 
 div form textarea:focus  {
@@ -54,10 +62,36 @@ div form input[type="submit"]   {
     background: aqua;
     border: none;
     font-weight: bold;
-    transition: 1s;
+    transition: 0.40s;
 }
 
 div form input[type="submit"]:hover   {
 background:#5f5fff;
-transition: 1s;
+transition: 0.40s;
 }
+
+        </style>
+
+        <script></script>
+    </head>
+
+    <body>
+
+<div>
+    <form>
+        <input type="text" name="nm" class="name" id="name" placeholder="Enter Name">
+        <br>
+        <input type="password" name="ps" id="pss" placeholder="Enter Password">
+        <br>
+        <input type="number" name="no" id="num" placeholder="Enter Mobile No.">
+        <br>
+        <input type="text" name="em" id="eml" placeholder="Enter E-Mail">
+        <br>
+        <textarea placeholder="Enter Message"></textarea>
+        <br>
+        <input type="submit" value="Log-In">
+    </form>
+</div>
+
+    </body>
+</html>
